<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">来团吧</string>
    <string name="set">设置</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tuan">TuanActivity</string>
    <string name="title_activity_checkin">CheckinActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_search_more">SearchMoreActivity</string>
    <string name="title_activity_shop_details">ShopDetails</string>
    <string name="title_activity_sou_quan_cheng">搜全城</string>
    <string name="title_activity_shop_details_more">ShopDetailsMore</string>
    <string name="title_activity_paihangbang">Paihangbang</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_shop_detailsqiandao">ShopDetailsqiandaoActivity</string>
    <string name="title_activity_shop_detailsdianping">ShopDetailsdianpingActivity</string>
    <string name="title_activity_paihangbang_more">Paihangbang_more</string>
    <string name="title_activity_paihangbang_bzrm">Paihangbang_bzrm</string>
    <string name="title_activity_tuan_details">TuanDetailsActivity</string>
	<string name="zhuce">注册</string>
	<string name="setting">设置</string>
	<string name="tuangouche">团购车</string>
	<string name="dalian">大连</string>
	<string name="denglu">登录</string>
	<string name="search">搜索</string>
	<string name="mine">个人中心</string>
	<string name="search_content">请输入搜索内容</string>
	<string name="firstpage">首页</string>
	<string name="hello_world">登录</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="login">登录</string>
    <string name="main_page">首页</string>
    <string name="keep">保存</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="find_password">找回密码</string>
    <string name="user_info">个人信息</string>
    <string name="user_info_simple">个人基本信息</string>
    <string name="text_edit_password">修改密码</string>
    <string name="login_auto">自动登录</string>
    <string name="rem_pass">记住密码</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="back">返回</string>
    <string name="user_name">用户名</string>
    <string name="old_pass">原密码</string>
    <string name="old_number">原手机号码</string>
    <string name="phone_number">手机号码</string>
    <string name="new_pass">新密码</string>
    <string name="new_number">新手机号码</string>
    <string name="my_test_past">我已通过的考试</string>
    <string name="place_info">开启定位服务</string>
    <string name="my_test_now">我已报名的考试</string>
    <string name="about_us">关于我们</string>
    <string name="my_test_will">我关注的考试</string>
    <string name="re_new">版本更新</string>
    <string name="simple_info">个人基本信息</string>
    <string name="recom_info">推荐信息</string>
    <string name="my_course_past">我上过的课程</string>
    <string name="my_course_now">我在上的课程</string>
    <string name="my_course_will">我关注的课程</string>
    <string name="my_now_buy">我的团购车</string>
    <string name="nick_name">昵称</string>
    <string name="gender">性别</string>
    <string name="user_password">密码</string>
    <string name="ensure_user_password">确认密码</string>
    <string name="identify_code">输入验证码</string>
    <string name="get_identify_code">获取验证码</string>
    <string name="my_aim">目标</string>
    <string name="edit_info">编辑信息</string>
    <string name="edit_number">修改手机号</string>
    <string name="ensure_edit">确认修改</string>
    <string name="find_now">立即找回</string>
    <string name="my_school">所在校区</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_user_info_simple">UserInfoSimpleActivity</string>
    <string name="title_activity_edit_password">EditPasswordActivity</string>
    <string name="title_activity_edit_phone_number_main">EditPhoneNumberMainActivity</string>
    <string name="title_activity_set">SetActivity</string>
</resources>
