<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/lineStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
        <LinearLayout 
           
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<TextView
     style="@style/EditTextStyle"
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/recom_info"
            android:id="@+id/text_recom_info"
           />

    <TextView
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/place_info"
            android:id="@+id/text_place_info"
           />
    <TextView
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/about_us"
            android:id="@+id/text_about_us"
           />
    <TextView
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/re_new"
            android:id="@+id/text_re_newl"
           />
     <TextView
          style="@style/EditTextStyle"
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/my_course_past"
            android:id="@+id/text_my_course_past"
           />
      <TextView
           style="@style/EditTextStyle"
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/my_course_now"
            android:id="@+id/text_my_course_now"
           />
      
    </LinearLayout>
  </ScrollView>  

</LinearLayout>
