<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
     android:background="#ffffff" >

    <RelativeLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="#26a9e7" >

        <TextView
            
            android:id="@+id/edit_number_back"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
             android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
             android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit_number"
            android:textColor="@color/my_title_textcolor"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/OldNumber"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_number" />

        <EditText
            android:id="@+id/NewNumber"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_number"
            android:inputType="numberSigned" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ADADAD"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/text_edit_number_identify_code"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/identify_code" />

            <Button
                android:id="@+id/get_edit_number_code"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/get_identify_code" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/buttonLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ensure_edit_number"
            style="@style/buttonStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/ensure_edit" />
    </LinearLayout>

</LinearLayout>