<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/lineStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@drawable/title_background"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="#26a9e7" >

        <TextView
            android:id="@+id/edit_pass_back"
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
             android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
             android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/text_edit_password"
            android:textColor="@color/my_title_textcolor"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ADADAD"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/OldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.2dp"
            android:background="#FFFFFF"
            android:hint="@string/old_pass"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/New_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.2dp"
            android:background="#FFFFFF"
            android:hint="@string/new_pass"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/New_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.2dp"
            android:background="#FFFFFF"
            android:hint="@string/ensure_user_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ADADAD"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/text_edit_identify_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.2dp"
                android:layout_weight="8"
                android:background="#FFFFFF"
                android:hint="@string/identify_code"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/get_edit_code"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/get_identify_code" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/buttonLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ensure_edit_password"
            style="@style/buttonStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/ensure_edit" />
    </LinearLayout>

</LinearLayout>