<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/lineStyle"
     android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:background="#ffffff" >

        <EditText
            android:id="@+id/OldPass"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/text_edit_identify_code"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/identify_code" />

            <Button
                android:id="@+id/get_edit_code"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/get_identify_code" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/buttonLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="#ffffff" >

        <Button
            
            android:id="@+id/ensure_edit_password"
            style="@style/buttonStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/find_now" />
    </LinearLayout>

</LinearLayout>