<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/tab_rg_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mmfooter_bg"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_rb_1"
            style="@style/tab_rb_style"
            android:checked="true"
            android:drawableTop="@drawable/tab_selector_weixing"
            android:text="@string/firstpage" />

        <RadioButton
            android:id="@+id/tab_rb_2"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_tongxunlu"
            android:text="@string/tuangouche" />

        <RadioButton
            android:id="@+id/tab_rb_3"
            style="@style/tab_rb_style"
            android:drawableTop="@drawable/tab_selector_wo"
            android:text="@string/mine" />
    </RadioGroup>

    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />
    </android.support.v4.app.FragmentTabHost>

</LinearLayout>