<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="#26a9e7" >

        <TextView
            android:id="@+id/findpass_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/back"
            android:textColor="@color/my_title_textcolor"
            android:textSize="18sp" 
            android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/findpass_main_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_page"
            android:textColor="@color/my_title_textcolor"
            android:textSize="18sp"
            android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/find_password"
            android:textColor="@color/my_title_textcolor"
            android:textSize="25sp" 
            android:layout_marginLeft="10dp" 
            android:layout_marginRight="10dp" 
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
    </RelativeLayout>

</LinearLayout>