<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ADADAD"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/Registration_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.2dp"
                    android:background="#FFFFFF"
                    android:hint="@string/user_name"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/Registration_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.2dp"
                    android:background="#FFFFFF"
                    android:hint="@string/nick_name"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/Registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.2dp"
                    android:background="#FFFFFF"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/Registration_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.2dp"
                    android:background="#FFFFFF"
                    android:hint="@string/ensure_user_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />
                
                 <EditText
                    android:id="@+id/Registration_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.2dp"
                    android:background="#FFFFFF"
                    android:hint="email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>

           <!--  <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ADADAD"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/text_identify_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.2dp"
                    android:layout_weight="8"
                    android:background="#FFFFFF"
                    android:hint="@string/identify_code"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/get_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/get_identify_code" />
"
"
            </LinearLayout> -->

            <TextView
                android:background="#26a9e7"
                android:id="@+id/Registration_OK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView> 

</LinearLayout>